[package]
name = "opensrf"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.5"
chrono = "0.4.22"
yaml-rust = "0.4.5"
thread-id = "4.0.0"
log = "0.4.17"
syslog = "6.0.1"
json = "0.12.4"
roxmltree = "0.14.1"
redis = { version = "0.21.6", features = ["streams"] }
gethostname = "0.2.3"
threadpool = "1.8.1"
regex = "1.6"
signal-hook = "0.3.14"

[[bin]]
name = "router"

[[example]]
name = "client"

[[example]]
name = "multi-domain-routing"

